--- a/допзадание.html
+++ b/допзадание.html
@@ -1,1 +1,20 @@
- <!DOCTYPE html>
+<!DOCTYPE html> 
+<HTML> 
+        <HEAD> 
+            <META charset="utf-8"> 
+            <TITLE>Задание1</TITLE> 
+        </HEAD> 
+        <BODY> 
+<h1 align="center">Заголовок первого уровня</h1>
+<h2>Предварительно форматированный текст:</h2>
+<pre>x | o |
+    ‐‐‐‐‐‐‐‐‐‐‐
+    | х |
+    ‐‐‐‐‐‐‐‐‐‐‐
+    o | x | o</pre>
+    <hr>
+    <h2>Тег address</h2>
+    <address><i>Kuprevicha, 1/1, 220141, Minsk, Belarus. Phone:11 +375.17.26869</i></address>
+
+
+        </BODY> 
