--- a/допзадание.html
+++ b/допзадание.html
@@ -2,7 +2,15 @@
 <HTML> 
         <HEAD> 
             <META charset="utf-8"> 
-            <TITLE>Задание1</TITLE> 
+            <TITLE>Допзадание</TITLE> 
+            <style>
+                .colortext {
+                  color:red;
+                   }
+                 .colortext2 {
+                     color:blue;
+                     }  
+               </style>
         </HEAD> 
         <BODY> 
 <h1 align="center">Заголовок первого уровня</h1>
@@ -15,6 +23,65 @@
     <hr>
     <h2>Тег address</h2>
     <address><i>Kuprevicha, 1/1, 220141, Minsk, Belarus. Phone:11 +375.17.26869</i></address>
-
+    <hr>
+    <h2>Семантические и функциональные строчные теги</h2>
+    <p>Пожелания автора:</p>
+    <p><span class="colortext"><s>Данный текст убрать из монографии</s></span> и заменить его на <span class="colortext2"><u>вновь помещенный текст.</u></span></p>
+    <hr>
+    <h2>Работа со строчными и блоковыми цитатами</h2>
+    <div>Цитата короткая:</div>
+    <cite>И всё-таки она верится!</cite>
+    <p>Цитата занимающая несколько предложений:</p>
+    <blockquote>
+        <p>О сколько нам открытий чудных <br>
+        Готовят просвещенья дух<br>
+        И опыт, сын ошибок трудных,<br>
+        И гений, парадоксов друг,<br>
+        И случай, бог изобретатель...</p>
+    </blockquote>
+    <hr>
+    <h2>Семантические и функциональные строчные теги</h2>
+    <p>
+<strong>Тэг &lt;STRONG&gt; делает данный фрагмент текста более важным.</strong><em>Тэг&lt;em&gt;  менее важным.<br></em>
+    В то время как теги &lt;b&gt; и &lt;i&gt; делают текст просто <b>полужирным</b> и <i>курсивом </i>соответственно.
+</p>
+<hr>
+<h2>Теги форматирования машинного языка</h2>
+<h4>При выполнении программного кода на языке PERL:</h4>
+<p><code>#!/usr/local/bin/perl <br>
+    print "Content‐type: text/html\n\n";<br>
+    print "&lt;H1&gt;Hello World&lt;/H1&gt;\n";</code></p>
+    <div>Программа выведет:</div>
+    <samp>Hello, World!</samp>
+    <p>Однако в браузере у нас будет отображаться результат выполнения этой программы:</p>
+    <h1>Hello, World!</h1>
+    <hr>
+    <h2>Комментарии и литералы(мнемоники) в HTML</h2>
+ <pre>&lt;!&ndash;&ndash;это комментарий&ndash;&ndash;&gt;
+                &lt;!&ndash;&ndash;и это также комментарий,
+                занимающий более одной строки&ndash;&ndash;&gt;
+ </pre>
+ <hr>
+ <h2>Теги над­ и подстрочных символов</h2>
+ <h3 align="center">Магазин работает:</h3>
+ <pre>
+     <strong>
+                                                                                     C 08<sup><u>30</u></sup> до 18<sup><u>30</u></sup>
+                                                                                  обед с 13<sup><u>00</u></sup> до 14<sup><u>00</u></sup>
+                                                                            выходной: <u>суббота</u>,<u>воскресенье</u>
+     </strong>                                                                     
+ </pre>
+ <hr>
+ <h2>Вот такой текст</h2>
+ <pre><h2>
+        Э о  р с о  е ё ы  т к т
+         т  п о т  в с л й  е с 
+</h2></pre>
+<hr>
+<h2>Акроним и курсив</h2>
+<p>&#84;&#934;: &#933;<var>(x)=e<sup>-i&pi;x</sup>+log<sub>x</sub>4</var></p>
+<hr>
+<h2>Тег small внтури абзаца</h2>
+<p align="right">Создано при помощи блокнота&copy;</p>
 
         </BODY> 
