--- a/Homework 2/заданик2.3.html
+++ b/Homework 2/заданик2.3.html
@@ -9,13 +9,13 @@
 <BODY>
   <h1 id="razdel3" align="center"> HOW-TO:Программа на Python, Часть 1</h1>
   <ul>
-    <li><a href="https://docs.google.com/file/d/0B7-pec-Rldg3THh0ME56bGt0eVU/edit"> Программа на Python - часть
-        1</a> </li>
-    <li>
-      <a href="https://docs.google.com/file/d/0B7-pec-Rldg3NzFoeTZybHJDUUk/edit"> Программа на Python - часть
-        2</a> </li>
-    <li><a href="https://docs.google.com/file/d/0B7-pec-Rldg3RVRRLTJZQ292ZW8/edit"> Программа на Python - часть 3</a>
-    </li>
+    <li><i><a href="https://docs.google.com/file/d/0B7-pec-Rldg3THh0ME56bGt0eVU/edit"> Программа на Python - часть
+          1</a> </i></li>
+    <li><i>
+        <a href="https://docs.google.com/file/d/0B7-pec-Rldg3NzFoeTZybHJDUUk/edit"> Программа на Python - часть
+          2</a></i> </li>
+    <li><i><a href="https://docs.google.com/file/d/0B7-pec-Rldg3RVRRLTJZQ292ZW8/edit"> Программа на Python - часть 3</a>
+      </i></li>
   </ul>
   <h2 align=" center"></h2 align>Содержание</h2>
   <ul>
