--- a/Homework 2/задание2.4.html
+++ b/Homework 2/задание2.4.html
@@ -15,13 +15,13 @@
   <h1 id="cc" align="center"> HOW-TO:Программа на Python, Часть 2</h1>
   <ul>
     <li><i>
-        <a href="../задание 1.html">Программа на Python - часть 1</a></i></li>
+        <a href="заданик2.3.html">Программа на Python - часть 1</a></i></li>
     <li>
       <i>
-        <a href="../задание 2.html"> Программа на Python - часть 2</a></i></li>
+        <a href="задание2.4.html"> Программа на Python - часть 2</a></i></li>
     <li>
       <i>
-        <a href="../задание 3.html"> Программа на Python - часть 3</a> </i></li>
+        <a href="задание2.5.html"> Программа на Python - часть 3</a> </i></li>
   </ul>
   <h2 align=" center"> Содержание</h2>
   <h3 align="center">HOW-TO: Программа на Python, Часть 2</h3>
