--- a/Homework 2/задание2.5.html
+++ b/Homework 2/задание2.5.html
@@ -14,9 +14,9 @@
   <img align="right" src="img/Icon-Python.png" alt="python">
   <h1 id="cc" align="center">HOW-TO: Программа на Python, Часть 3</h1>
   <ul>
-    <li><i><a href="../задание 1.html"> Программа на Python - часть 1</a> </i></li>
-    <li><i><a href="../задание 2.html"> Программа на Python - часть 2</a></i></li>
-    <li><i><a href="../задание 3.html"> Программа на Python - часть 3</a> </i></li>
+    <li><i><a href="заданик2.3.html"> Программа на Python - часть 1</a> </i></li>
+    <li><i><a href="задание2.4.html"> Программа на Python - часть 2</a></i></li>
+    <li><i><a href="задание2.5.html"> Программа на Python - часть 3</a> </i></li>
   </ul>
   <h2 align="center"> Содержание</h2>
   <h3 align="center">HOW-TO: Программа на Python, Часть 3</h3>
